responsive el menu

--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
       <section class="banner">
         <div class="container-banner container flex">
           <div class="banner-content">
-            <h1 class="banner__title font-title text-white-100">Adopta chincha</h1>
+            <h1 class="banner__title font-title text-white-100">
+              Adopta chincha
+            </h1>
             <blockquote class="banner__frases">
-              <p class="banner__copy text-white-200" id="frase">
-              
-              </p>
-              <footer class="frases-autor text-white-200"><span id="autor"></span></footer>
+              <p class="banner__copy text-white-200" id="frase"></p>
+              <footer class="frases-autor text-white-200">
+                <span id="autor"></span>
+              </footer>
             </blockquote>
-            <a href="#adoptar" class="btn btn--white btn-banner"> Adoptar una mascota </a>
+            <a href="#adoptar" class="btn btn--white btn-banner">
+              Adoptar una mascota
+            </a>
           </div>
           <div class="banner-image">
             <img src="./imagenes/dog.svg" alt="imagen de perro" />
@@ -78,20 +82,24 @@
       </section>
 
       <section id="porqueAdoptar" class="porqueAdoptar">
-        <div class="container">
-          <h2 class="text-center title font-title text-white-100">¿Por que adoptar?</h2>
-          <p class="text-white-200">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
-            eligendi aliquid sapiente asperiores blanditiis, maxime odit nisi
-            inventore ab velit labore error consequuntur odio, reprehenderit
-            explicabo consequatur, saepe molestias deserunt.
-          </p>
-          <p class="text-white-200">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-            quasi facere, sequi dolorem porro, consequatur eos cum voluptates
-            nisi neque id pariatur, debitis consectetur. Odio veritatis beatae
-            saepe eveniet quisquam.
-          </p>
+        <div class="container-porqueAdoptar">
+          <div class="container">
+            <h2 class="text-center title font-title text-white-100">
+              ¿Por que adoptar?
+            </h2>
+            <p class="text-white-200">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor
+              eligendi aliquid sapiente asperiores blanditiis, maxime odit nisi
+              inventore ab velit labore error consequuntur odio, reprehenderit
+              explicabo consequatur, saepe molestias deserunt.
+            </p>
+            <p class="text-white-200">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              quasi facere, sequi dolorem porro, consequatur eos cum voluptates
+              nisi neque id pariatur, debitis consectetur. Odio veritatis beatae
+              saepe eveniet quisquam.
+            </p>
+          </div>
         </div>
       </section>
       <section class="adopcion" id="adoptar">
