coregimos textos del formulario

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <input type="text" id="coreo" class="form-input" name="email" />
             </div>
             <div class="input-group">
-              <label for="mensaje">Correo: </label>
+              <label for="mensaje">Mensaje: </label>
               <textarea
                 class=".form-input"
                 name="mensaje"
